[MOD] Modified ObjectiveFactory class using the AbstractJsonReader